Updating with seurat wrappers package (need it for monocole

--- a/R_singlecell/Dockerfile
+++ b/R_singlecell/Dockerfile
@@ -12,3 +12,4 @@ RUN Rscript -e 'BiocManager::install(c("SingleR", "DropletUtils", "celldex"))'
 RUN Rscript -e 'devtools::install_github("immunogenomics/harmony")'
 RUN Rscript -e 'devtools::install_github("powellgenomicslab/scPred")'
 RUN Rscript -e 'remotes::install_github("chris-mcginnis-ucsf/DoubletFinder")'
+RUN Rscript -e 'remotes::install_github("satijalab/seurat-wrappers")'
