--- a/seurat_scanpy/Dockerfile
+++ b/seurat_scanpy/Dockerfile
@@ -20,3 +20,6 @@ RUN pip3 install numpy
 RUN pip3 install pandas
 RUN pip3 install scanpy
 RUN pip3 install leidenalg
+RUN pip3 install decoupler
+
+
