--- a/R_singlecell_big/Dockerfile
+++ b/R_singlecell_big/Dockerfile
@@ -41,4 +41,4 @@ RUN pip3 install leidenalg
 RUN pip3 install decoupler
 RUN pip3 install omnipath
 RUN pip3 install anndata2ri
-
+RUN pip3 install rpy2
